Work for #2347: fix expand/collapse icon

--- a/packages/survey-creator-core/src/components/tabs/logic-ui.scss
+++ b/packages/survey-creator-core/src/components/tabs/logic-ui.scss
@@ -81,7 +81,7 @@
 }
 
 .svc-logic-operator.svc-logic-operator--operator {
-  background-color: $secondary-light;
+  background-color: $secondary-back-light;
   &:hover, &:focus {
     background-color: $secondary;
   }
